# protohackers

./: Dockerfile  spec.yaml
p1/: Cargo.toml  Dockerfile
p1/src/: main.rs
smoke_test/: Cargo.toml  Dockerfile  fly.toml  spec.yaml
smoke_test/configuration/: base.yaml
smoke_test/src/: configuration.rs  lib.rs  main.rs
